# TodoCLI

./: .gitignore  CSVFile.cpp  CSVFile.hpp  LICENSE  Printer.cpp  Printer.hpp  README.md  TaskData.hpp  Time.hpp  Todo.cpp  Todo.hpp  main.cpp  meson.build
include/: CSVFile.hpp  Printer.hpp  StoreInterface.hpp  TaskData.hpp  Time.hpp  Todo.hpp
libs/CLI11/: LICENSE
libs/rapidcsv/: LICENSE
libs/tabulate/: LICENSE
src/: CSVFile.cpp  Printer.cpp  Todo.cpp  main.cpp
